# llama-specs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
assets/: models.json
locales/: en.toml  es.toml
src/: app.rs  main.rs
src/hardware/: gpu.rs  mod.rs  ram.rs
src/models/: compat.rs  database.rs  mod.rs  ollama.rs
src/ui/: header.rs  mod.rs  model_list.rs  sidebar.rs
