[package]
name = "llama-specs"
version = "0.2.0"
edition = "2024"
description = "Check which Ollama models are compatible with your hardware before downloading"
repository = "https://github.com/PabloViniegra/llama-specs"
license = "MIT"

[dependencies]
ratatui = "0.30.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
sysinfo = "0.38.3"
fuzzy-matcher = "0.3.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rust-i18n = "3.1.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
scraper = "0.21"
arboard = "3"
color-eyre = "0.6"
thiserror = "2"
futures = "0.3"

# NVML is only available on Linux and Windows (NVIDIA drivers); not on macOS.
[target.'cfg(not(target_os = "macos"))'.dependencies]
nvml-wrapper = "0.12.0"

# Profile used by cargo-dist for releases (thinner LTO for faster CI builds).
[profile.dist]
inherits = "release"
lto = "thin"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.31.0"
# CI backends to support
ci = "github"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Which actions to run on pull requests
pr-run-mode = "plan"
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
